--- a/client/src/styles/Input.scss
+++ b/client/src/styles/Input.scss
@@ -33,6 +33,17 @@
   border: none;
 }
 
+.song-search-container {
+  position: absolute;
+}
+
+.song-search-cell {
+  background-color: blue;
+  border: 1px solid white;
+  width: 100%;
+  height: 24px;
+}
+
 .panel-container {
   display: flex;
   flex-direction: row;
