--- a/client/src/styles/Player.scss
+++ b/client/src/styles/Player.scss
@@ -7,3 +7,14 @@
   width: 300px;
   margin: auto;
 }
+
+.footer-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  bottom: 20px;
+  margin: auto;
+}
