--- a/client/src/styles/Input.scss
+++ b/client/src/styles/Input.scss
@@ -1,11 +1,12 @@
 .container {
   width: 40%;
   margin: auto;
+  position: relative;
 }
 
 .input-container {
   display: flex;
-  margin: 12px auto;
+  margin: 0px auto 12px;
   height: 50px;
   border: 1px solid rgba(229, 231, 235, 50);
   align-items: center;
@@ -35,15 +36,21 @@
 
 .song-search-container {
   position: absolute;
+  bottom: 100%;
   width: 100%;
   list-style-type: none;
 }
 
+
 .song-search-cell {
-  background-color: blue;
-  border: 1px solid white;
+  background-color: #121212;
+  border: 1px solid #474545;
   width: 100%;
-  height: 24px;
+  height: 32px;
+}
+
+.song-text {
+  padding-left: 8px;
 }
 
 .panel-container {
